[package]
name = "lodis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
reqwest = "0.11.12"
serde = { version="1.0.147", features = ["derive"] }
serde_json = "1.0.88"
num_cpus = "1.14.0"
async-std = "1.12.0"
futures = "0.3.25"
rand = "0.8.5"
file-lock = "2.1.6"
